# sfile-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
sfile/: FileDetail.py  FileList.py  Sfile.py  SfileException.py  __init__.py
tests/: test__sfile.py
